<resources>
    <string name="app_name">GitClub</string>
    <string name="hint_username">UserName Or Email</string>
    <string name="hint_password">Password</string>
    <string name="error_null_username">Username can\'t not be empty</string>
    <string name="error_null_password">Password can\'t not be empty.</string>
    <string name="success_loading">Succeed in loading！</string>
    <string name="error_time_out">Connect time out, please try again.</string>
    <string name="error_network">Something happen while network loading.</string>
    <string name="error_no_network">Please Check your network.</string>
    <string name="error_sign_out">Fail to sign out!</string>
    <string name="error_login">Fail to login.</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="success_login">Succeed to login!</string>
    <string name="error_search_repo">"Fail to search repository. "</string>
    <string name="error_search_user">"Fail to search user. "</string>
    <string name="sort_stars">Most Stars</string>
    <string name="sort_forks">Most forks</string>
    <string name="sort_created">Recently created</string>
    <string name="sort_update">Recently update</string>
    <string name="search">Search</string>
    <string name="sort_match">Best match</string>
    <string name="pull_to_load_more">Pull to load more…</string>
    <string name="no_more">No more data！</string>
    <string name="loading">Loading…</string>
    <string name="title_search_repo">Repo</string>
    <string name="title_search_user">User</string>
    <string name="title_search">Search</string>
    <string name="sort_reset">Reset all</string>
    <string name="success_star_repo">"Succeed to star repo: "</string>
    <string name="error_star_repo">"Fail to star repo: "</string>
    <string name="success_unstar_repo">Succeed to unStar repo:</string>
    <string name="error_unstar_repo">Fail to unStar repo:</string>
    <string name="success_watch_repo">Succeed to watch repo:</string>
    <string name="error_watch_repo">Fail to watch repo:</string>
    <string name="success_unwatch_repo">Succeed to unWatch repo:</string>
    <string name="error_unwatch_repo">Fail to unWatch repo:</string>
    <string name="success_fork_repo">Succeed to fork repo:</string>
    <string name="error_fork_repo">Fail to fork repo:</string>
    <string name="Forking">Forking </string>
    <string name="follow">Follow</string>
    <string name="success_follow_user">succeed to follow </string>
    <string name="error_follow_user">Fail to follow </string>
    <string name="profile">Home</string>
    <string name="explore">Explore</string>
    <string name="news">News</string>

    <string name="success_unfollow_user">Succeed to unfollow </string>
    <string name="error_unfollow_user">Fail to unfollow </string>
    <string name="unfollow">UnFollow</string>
    <string name="default_bio">This gay is lazy,left nothing behind.</string>
    <string name="empty">No Data!</string>
    <string name="quick_return_bottom_behavior">tellh.com.gitclub.presentation.widget.QuickReturnBottomBehavior</string>
    <string name="quick_return_top_behavior">tellh.com.gitclub.presentation.widget.QuickReturnTopBehavior</string>
    <string name="title_program_language">Language</string>
    <string name="sort_follow">Most Followers</string>
    <string name="sort_repo">Repo sorted by</string>
    <string name="sort_user">User sorted by</string>
    <string name="title_sort_repo">Repository Sorted By</string>
    <string name="title_sort_user">User Sorted By</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="reqest_flying">Request Is Flying</string>
    <string name="error_get_trending">"Fail to get trending. "</string>
    <string name="error_get_showcases">"Fail to get showcases. "</string>
    <string name="title_since">Since</string>
    <string name="language">Language</string>
    <string name="sort_by">SortBy</string>
    <string name="error_not_login">You haven\'t Login.</string>
    <string name="error_get_news">"Fail to get News. "</string>
    <string name="date_year">year</string>
    <string name="date_month">month</string>
    <string name="date_day">day</string>
    <string name="date_hour">hour</string>
    <string name="date_minute">minute</string>
    <string name="date_sec">second</string>
    <string name="note_to_login">Please login first!</string>
    <string name="load_again">Please Load again.</string>
    <string name="home">Home</string>
    <string name="please_login">Please Login</string>
    <string name="visit_personal_home_page">Visit Personal Home Page</string>
    <string name="sign_out">Sign out</string>
    <string name="success_sign_out">Succeed to sign out!</string>
    <string name="confirm_sign_out">Are you sure to sign out?</string>
    <string name="Confirm">Confirm</string>
    <string name="error_self_follow">User can\'t not self-follow</string>
    <string name="no_description">No description</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="share">Share</string>
    <string name="error_share">"Failed to share in "</string>
    <string name="success_share">"Succeed to share in "</string>
    <string name="cancel_share">Share was canceled.</string>
    <string name="error_get_source_tree">"Failed to get source tree. "</string>
    <string name="error_gank_data">"Fail to get Gank data. "</string>
</resources>
