<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <tellh.com.gitclub.presentation.widget.DispatchTouchViewPager
        android:id="@+id/pager_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:tabIndicatorColor="@color/white"
            app:theme="@style/ToolbarColoredIcon"
            app:title="@string/search"
            app:titleTextColor="@color/white" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/white"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/gray" />
    </android.support.design.widget.AppBarLayout>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:fab_addButtonColorNormal="@color/pink"
        app:fab_addButtonColorPressed="@color/red"
        app:fab_labelStyle="@style/menu_labels_style"
        app:layout_behavior="@string/quick_return_bottom_behavior"
        app:quick_return_style="translate">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tag_black_18dp"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_size="mini"
            app:fab_title="@string/language" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/white"
            app:fab_colorPressed="@color/white_pressed"
            app:fab_icon="@drawable/ic_sort_black_18dp"
            app:fab_size="mini"
            app:fab_title="@string/sort_by" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>
</android.support.design.widget.CoordinatorLayout>