<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_rect"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <TextView
            android:background="@drawable/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome_back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_wrapper_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_wrapper_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/tv_cancel">

                <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.MaterialProgressBar.ProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:mpb_progressStyle="circular" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/btn_login"
                    android:textAllCaps="false"
                    android:textColor="@drawable/selector_blue"
                    android:textSize="20sp" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"
                android:text="@string/btn_cancel"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_red"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>