<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.fragment.home.HomePageFragment">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="@string/home"
        app:titleTextColor="@color/white" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="?attr/actionBarSize"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_personal_page"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_white">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    tools:background="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/please_login" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/visit_personal_home_page" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_stars"
                android:layout_marginTop="10dp"
                android:paddingLeft="16dp"
                android:background="@drawable/selector_white"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/ic_star"
                    android:layout_gravity="center_vertical"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
                <TextView
                    android:layout_marginLeft="40dp"
                    android:text="Stars"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/fl_watching"
                android:layout_marginTop="2dp"
                android:paddingLeft="16dp"
                android:background="@drawable/selector_white"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/ic_watch"
                    android:backgroundTint="#B9B9B9"
                    android:layout_gravity="center_vertical"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
                <TextView
                    android:layout_marginLeft="40dp"
                    android:text="Watching"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
            <FrameLayout
                android:id="@+id/fl_following"
                android:layout_marginTop="2dp"
                android:paddingLeft="16dp"
                android:background="@drawable/selector_white"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <ImageView
                    android:src="@drawable/ic_following"
                    android:backgroundTint="#B9B9B9"
                    android:layout_gravity="center_vertical"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
                <TextView
                    android:layout_marginLeft="40dp"
                    android:text="Following"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_followers"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/selector_white"
                android:paddingLeft="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_group" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:text="My Followers"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_repositories"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/selector_white"
                android:paddingLeft="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_book" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:text="My Repositories"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_settings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_white"
                android:paddingLeft="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:text="Setting"
                    android:textStyle="bold" />
            </FrameLayout>
            <TextView
                android:id="@+id/tv_sign_out"
                android:text="@string/sign_out"
                android:gravity="center"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_marginTop="2dp"
                android:background="@drawable/selector_white"
                android:layout_height="60dp"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
